feat: Modification d'une équipe
Ajout de la possibilité de modifier les joueurs d'une équipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -92,6 +92,11 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" (click)="closeTeamFilterModal()">Fermer</button>
+              <button type="button" class="btn btn-primary ms-2" 
+                      [disabled]="!selectedTeamFilter || selectedTeamFilter === ''" 
+                      (click)="openEditPlayersModal(selectedTeamFilter)">
+                Éditer
+              </button>
             </div>
           </div>
         </div>
@@ -914,3 +919,33 @@
   </div>
 -->
 <router-outlet></router-outlet>
+
+<!-- Ajout de la modale d'édition des joueurs -->
+<div class="score-modal" *ngIf="showEditPlayersModal && teamToEdit && teamToEdit.players">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Éditer les joueurs de {{ teamToEdit.name }}</h5>
+        <button type="button" class="close-button" (click)="closeEditPlayersModal()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <ul class="list-group mb-3">
+          <li *ngFor="let player of teamToEdit.players; let i = index" class="list-group-item d-flex justify-content-between align-items-center">
+            <input [(ngModel)]="teamToEdit.players[i]" class="form-control form-control-sm me-2" style="max-width: 200px; display: inline-block;" />
+            <button class="btn btn-danger btn-sm" (click)="removePlayer(i)"><i class="fas fa-trash"></i></button>
+          </li>
+        </ul>
+        <div class="input-group">
+          <input [(ngModel)]="newPlayerName" class="form-control" placeholder="Ajouter un joueur..." (keyup.enter)="addPlayer()" />
+          <button class="btn btn-success" (click)="addPlayer()">Ajouter</button>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="closeEditPlayersModal()">Fermer</button>
+        <button type="button" class="btn btn-primary" (click)="savePlayersEdit()">Enregistrer</button>
+      </div>
+    </div>
+  </div>
+</div>
